<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Arithmo</string>
    <string name="layout_name">Math Solver</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="matrix">Matrix</string>
    <string name="result">Result</string>
    <string name="main_hint">Enter equation</string>
    <string name="curve_hint">Enter function</string>
    <string name="scalar_hint">Enter a scalar</string>
    <string name="text_example">
        Examples:
        \n
        \n\u2022 2X²-7X-4 = 0
        \nX\u2080 = -1÷2
        \nX\u2081 = 4
        \n
        \n\u2022 16 : 2FC
        \n= 1011111100 (base 2)
	</string>
    <string name="system_in">Linear system:</string>
    <string name="system_out">Found values:</string>
    <string name="help_text">
        Arithmo is a free math multi-tools for high school students.
		\nEquations - Functions - Linear system - Matrix
		\n
        \n\u2022 Solving equations of any degree
        \n
        \nEnter the equation with the unknown (a capital letter) and without forgetting the sign (=) then launch the process. You can enable the search for all solutions within the specified interval. The default range is -1110 to 1110.
        \nExamples :
        \nX²-5√X = 2X-2 → X = 4.0
        \nsin(2X) = cosX → X = 30.0
        \n
        \n\u2022 Changing from one number system to another
        \n
        \nChoose the starting arithmetic base by writing it before the number separated by a colon (:) and then choose the end base by scrolling the drop-down bar. The decimal system is the default system.
        \nExamples :
        \n2022 → 11111100110 (base 2)
        \n16:F3C → 3900
        \n
        \n\u2022 Conversion of length, time, mass and speed units
        \n
        \nIn the dedicated form, you must enter the values ​​to be converted, specifying the source unit and the target unit.
		\nExamples :
        \n2 km → 2000.0 m
        \n6 m·s¯¹ → 2.5 km·h¯¹
        \n
        \n\u2022 Matrix calculus, co-matrix and determinant
        \n
        \nIn the dedicated form, enter the data (matrix A and matrix B or a scalar) then choose an operation to apply. The result is displayed in the C tab.
		\nExample :
        \n1 2\u00A0\u00A0\u00A0\u00A01 2 3\u00A0\u00A0\u00A0\u00A0\u00A0\u00A09 12 15
        \n3 7 × 4 5 6 = 19 26 33
        \n5 6\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A029 40 51
        \n
        \n\u2022 Graphic representation of functions, derivation and integration
        \n
        \nIn the dedicated form, enter the expression of f as a function of a variable (a capital letter) then launch the study of the function.
		\nExample :
        \nf(X) = X\u00B3-5X → f\'(2) = 7.0
        \n
        \n\u2022 Performing ordinary scientific computing
        \n
        \nExpress the result as an irreducible fraction by checking the dedicated box.
		\nExamples :
        \n1.25 → 5÷4
        \n3/9 → 1÷3
		\n
		\nRetrieve the last results through the variables &amp;1, &amp;2, &amp;3, …, &amp;9 and calculate the recurrence formulas.
		\nExample : (Fibonacci suite)
		\n1 → 1
		\n2 → 2
		\n&amp;1+&amp;2 → 3
		\n&amp;1+&amp;2 → 5
		\n&amp;1+&amp;2 → 8
		\n…
		\n
		\nUse the mathematical constants π and e in your equations or calculations.
		\nExamples :
        \nX/2 = π → X = 6.283185307179586
        \ne+2 → 4.718281828459045
		\n
		\n\u2022 Syntax of supported functions
		\n
		\nNatural logarithm (lnX)
		\nExponential (expX) and Decimal Logarithm (logX)
		\nCosine (cosX) and Arccosine (acosX)
		\nSinus (sinX) and Arcsine (asinX)
		\nTangent (tanX) and Arctangent (atanX)
		\nHyperbolic cosine (coshX)
		\nHyperbolic sinus (sinhX)
		\nHyperbolic Tangent (tanhX)
		\nPower (X^Y) and Radical (Y\u2206X)
		\nSquare Power (X²) and Square Root (\u221AX)
		\nDivision Remainder (X\\Y) and Percentage (X%)
		\nSum (X#) and Factorial (X!)
		\nAbsolute value (@X or [X])
		\n
		\n© 2022 Hassen Major
	</string>
    <string name="hypermail"><a href="mailto:hassenmajor@gmail.com">Click here to write to the developer!</a></string>
    <string name="hyperlien"><a href="https://play.google.com/store">Evaluate the app on Play Store!</a></string>
    <string name="title_activity_help">About</string>
    <string name="title_activity_main">Equation Solver</string>
    <string name="title_activity_matrix">Matrix Calculator</string>
    <string name="title_activity_unit">Units Converter</string>
    <string name="title_activity_curve">Functions Graph</string>
    <string name="title_activity_system">Linear System Solver</string>
    <string name="title_activity_base">Arithmetic Bases</string>
    <string name="title_exit">Exit</string>
    <string name="fraction">Fraction</string>
    <string name="all">All solutions</string>
    <string name="interval">Interval</string>
    <string name="degree">Degree</string>
    <string name="radian">Radian</string>
    <string name="time">Time to convert</string>
    <string name="length">Length to convert</string>
    <string name="speed">Speed to convert</string>
    <string name="mass">Mass to convert</string>
    <string name="positive">Contacte Us</string>
    <string name="neutral">Evaluate App on Play Store</string>
    <string name="negative">Back</string>
    <string name="text_copied">Solutions field copied</string>

</resources>
