<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/CouleurFont"
    tools:context=".FullActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/relativeView1"
                android:background="@drawable/relativeview1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_dimens"
                android:layout_marginHorizontal="@dimen/layout_horizontal_margin"
                android:layout_marginBottom="@dimen/layout_vertical_margin"
                android:layout_marginTop="40dp">

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_margin="@dimen/image_margin"
                    android:layout_width="@dimen/layout_dimens"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/ic_main_transparent" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:textColorHint="#7584F2"
                    android:textSize="@dimen/full_text_size"
                    android:layout_toEndOf="@id/imageView1"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:text="@string/title_activity_main" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeView2"
                android:background="@drawable/relativeview2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_dimens"
                android:layout_marginHorizontal="@dimen/layout_horizontal_margin"
                android:layout_marginVertical="@dimen/layout_vertical_margin">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_margin="@dimen/image_margin"
                    android:layout_width="@dimen/layout_dimens"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/ic_system_transparent" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:textColorHint="#1DD882"
                    android:textSize="@dimen/full_text_size"
                    android:layout_toEndOf="@id/imageView2"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:text="@string/title_activity_system" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeView3"
                android:background="@drawable/relativeview3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_dimens"
                android:layout_marginHorizontal="@dimen/layout_horizontal_margin"
                android:layout_marginVertical="@dimen/layout_vertical_margin">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_margin="@dimen/image_margin"
                    android:layout_width="@dimen/layout_dimens"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/ic_curve_transparent" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:textColorHint="#A3D4FF"
                    android:textSize="@dimen/full_text_size"
                    android:layout_toEndOf="@id/imageView3"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:text="@string/title_activity_curve" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeView4"
                android:background="@drawable/relativeview4"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_dimens"
                android:layout_marginHorizontal="@dimen/layout_horizontal_margin"
                android:layout_marginVertical="@dimen/layout_vertical_margin">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_margin="@dimen/image_margin"
                    android:layout_width="@dimen/layout_dimens"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/ic_matrix_transparent" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:textColorHint="#FFCE00"
                    android:textSize="@dimen/full_text_size"
                    android:layout_toEndOf="@id/imageView4"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:text="@string/title_activity_matrix" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeView5"
                android:background="@drawable/relativeview5"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_dimens"
                android:layout_marginHorizontal="@dimen/layout_horizontal_margin"
                android:layout_marginVertical="@dimen/layout_vertical_margin">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_margin="@dimen/image_margin"
                    android:layout_width="@dimen/layout_dimens"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/ic_unit_transparent" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:textColorHint="#FF6C52"
                    android:textSize="@dimen/full_text_size"
                    android:layout_toEndOf="@id/imageView5"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:text="@string/title_activity_unit" />

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>